--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-autosuggest": "^9.4.2",
     "react-dom": "^16.7.0"
