--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hot-loader": "^4.6.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "workbox-webpack-plugin": "^3.6.3"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
